2012-06-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac:
	* configure: Use gnustep-config to find include directories.
	* COPYING:
	* COPYING.LIB:
	* INSTALL:
	* README: Add distribution files.

2012-06-08 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCharacterSet.c: Avoid memory leak.
	* Source/CFString.c: Simplify constant string generation.
	* Source/CFTimeZone.c: Fix bug in CFTimeZoneGetDaylightSavingTimeOffset().

2012-06-07 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/ GSHashTable.c: Correctly hash keys when a hash function
	is provided.
	* Source/CFTimeZone.c: Implement abbreviation dictionary.
	* Tests/CFTimeZone/general.m: Uncomment abbreviation dictionary test.

2012-05-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Avoid memory leak.
	* Source/CFURL.c: Correctly copy file system path.
	* Source/CFBase.c: Do a memory copy of the context.
	* Source/CFCharacterSet.c: Correctly calculate string length.
	* Tests/CFCharacterSet/basic.m: New tests.

2012-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c:
	* Source/CFURL.c:
	* Source/CFString.c:
	* Source/CFCalendar.c:
	* Source/CFAttributedString.c:
	* Source/CFLocale.c:
	* Source/CFDateFormatter.c:
	* Source/CFXMLParser.c:
	* Source/CFURLAccess.c: Fix some bugs found by static analyzer.
	* Source/NSCFError.m: Avoid compiler warnings.

2012-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFType.m: Remove unneede call to Objective-C runtime.
	* Source/CFCalendar.c:
	* Source/CFLocale.c:
	* Source/CFDateFormatter.c:
	* Source/CFStringUtilities.c:
	* Source/CFNumberFormatter.c:
	* Source/GSPrivate.h: Modify function to get the locale as a C string.
	* Source/CFArray.c: Allocate the correct amount of memory.
	* Tests/CFTree/basic.m: Fix premature call to release.
	* Tests/CFURL/create.m: Mark test as hopeful.
	* configure.ac:
	* configure: Remove option to build without ICU.
	* autom4te.cache/: Remove.
